src/test/deca/syntax/valid/assign_chain.deca

// Description :
// Affectation chaînée via parenthèses
//
// Resultats :
// ok
//

{
    a = ( b = 3 ) ;
}