src/test/deca/syntax/invalid/print_missing_parent.deca

// Description :
// println sans parenthèses
//
// Resultats :
// Erreur syntaxique
// Ligne 4 : no viable alternative
// Regle : inst : PRINTLN '(' list_expr ')' ';'

{
    println 3;
}